--- a/FYP/Views/Dashboard/AddAssignment.cshtml
+++ b/FYP/Views/Dashboard/AddAssignment.cshtml
@@ -38,7 +38,7 @@
                 <div class="w-75">
 
                     <div class="input-group mb-3">
-                        <input type="file" class="form-control text-white bg-black bg-opacity-10 w-50" asp-for="File" tabindex="10" tabindex="3">
+                        <input type="file" class="form-control text-white bg-black bg-opacity-10 w-50" asp-for="File" accept=".doc,.docx" tabindex="10" tabindex="3">
                         <label class="input-group-text" asp-for="File">Upload Assignment File</label>
                     </div>
 
