--- a/FYP/Views/Dashboard/_assignments.cshtml
+++ b/FYP/Views/Dashboard/_assignments.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FYP.Models.Dashboard.Assignments
 @{
-
+        
 }
 <form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="EditAssignment" multiple>
     <!-- Modal -->
@@ -11,10 +11,8 @@
                     <h1 class="modal-title fs-5 fw-bold text-uppercase" id="CreateEvent">Edit Assignment</h1>
                     <button type="button" class="btn-close filt " data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-
-
-                <input type="hidden" asp-for="@Model.File_Name" />
-
+                
+                <input type="hidden" asp-for="File_Name"/>
                 <div class="modal-body">
 
                     <div class="mb-3 col">
@@ -53,7 +51,7 @@
                    
                     <div class="mb-3">
                         <label asp-for="@Model.File" class="form-label"></label>
-                        <input asp-for="@Model.File" class="form-control focus filt bg-white bg-opacity-10" type="file">
+                        <input asp-for="@Model.File" class="form-control focus filt bg-white bg-opacity-10" type="file" multiple>
 
                     </div>
 
