Updating to profile setting

--- a/FYP/Views/Dashboard/AddAssignment.cshtml
+++ b/FYP/Views/Dashboard/AddAssignment.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Links";
 }
-<body style="" class="links-background">
+<body style="" class="AddAssginment-background">
 
 </body>
 
@@ -71,11 +71,11 @@
                 </div>
                 
                 <div class="text-center">
-                    <a asp-action="Assignments" asp-controller="Dashboard" class="btn btn-light m-1">
+                    <a asp-action="Assignments" asp-controller="Dashboard" class="btn btn-light m-1 fs-5">
                         All Assignments
                     </a>
 
-                    <input type="submit" value="Add Assignment" class="btn btn-light m-1" />
+                    <input type="submit" value="Add Assignment" class="btn btn-light m-1 fs-5" />
                 </div>
             </form>
         </center>
