--- a/FYP/Views/Shared/Dropdown_Partials/_Home.cshtml
+++ b/FYP/Views/Shared/Dropdown_Partials/_Home.cshtml
@@ -57,14 +57,14 @@
                         }
                         else
                         {
-                            <input type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#fileUpload" value="Upload Profile Photo" />
+                            <input type="button" class="btn btn-outline-light border" data-bs-toggle="modal" data-bs-target="#fileUpload" value="Upload Profile Photo" />
 
                             <!-- Modal -->
                             <div class="modal fade" id="fileUpload" tabindex="-1" aria-labelledby="propic" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
+                                <div class="modal-dialog text-white bg-black bg-opacity-50">
+                                    <div class="modal-content bg-black  bg-opacity-75">
 
-                                        <div class="modal-header  text-black">
+                                        <div class="modal-header  text-white ">
                                             <h1 class="modal-title fs-5" id="propic">Upload Profile Photo</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
