--- a/FYP/Views/Dashboard/DetailsAssignemt.cshtml
+++ b/FYP/Views/Dashboard/DetailsAssignemt.cshtml
@@ -13,23 +13,7 @@
 @if (TempData["AssignmentUpdated"] != null)
 {
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>Updated Successfully||</strong> Assignment was updated.
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-}
-
-@if (TempData["FileIsRemoved"] != null)
-{
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>File Deleted Successfully ||</strong> A file was deleted.
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-}
-
-@if (TempData["FileNotRemoved"] != null)
-{
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>Sorry file cannot be deleted ||</strong> There was a problem.
+        <strong>Updated Successfully||</strong> Assignment was updated successfully.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
@@ -60,9 +44,9 @@
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show bg-black bg-opacity-50 text-start" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body d-flex">
                            
-                            @if (Model.File_Name != null)
+                            @if (Model.File_Name != "" && Model.File_Name != null)
                             {
 
                                 @foreach (var filename in names)
@@ -72,7 +56,6 @@
                                         <div>
 
                                             <a asp-action="DownloadFile" asp-controller="Dashboard" asp-route-filename="@filename" class="btn btn-outline-info m-1" title="download this file" download="@filename"> <img class="d-block icon2 mx-auto" src="~/Icons/download.svg" style="filter:invert(1);height:4rem;" /> Download</a>
-                                            <a asp-action="DeleteAssignment" asp-controller="Dashboard" asp-route-id="@Model.id" asp-route-filename="@filename" class="btn btn-outline-danger">Delete</a>
                                         </div>
                                     }
                                 }
@@ -124,8 +107,35 @@
     </div>
 </div>
 
-<div class="bg-dark bg-opacity-75 position-relative w-100" style="top:2rem;">
+<div class="bg-dark bg-opacity-75 position-relative w-100 text-center" style="top:2rem;">
     <button class="card-link btn btn-outline-warning m-2" asp-route-id="@Model.id" type="button" data-toggle="ajax-modal" data-target="#_EditAssignment" data-url="@Url.Action($"EditAssignment/{@Model?.id}","Dashboard")">Edit</button>
+
+    <a href="#_Delete" data-bs-toggle="modal" data-bs-target="#_Delete" class="btn btn-outline-danger m-2">Delete</a>
 
     <a class="btn btn-outline-info m-2" asp-action="Assignments" asp-controller="Dashboard">All Assignmets</a>
 </div>
+
+<form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="DeleteAssignment">
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="_Delete" tabindex="-1" aria-labelledby="Delete" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content overflow-scroll text-white bg-black bg-opacity-50">
+                <div class="modal-header text-center">
+                    <h1 class="modal-title fs-5 fw-bold text-uppercase" id="DeleteEvent">Do you want to delete this Assignment</h1>
+                    <button type="button" class="btn-close filt " data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <input type="hidden" asp-for="@Model.id" />
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                    <button type="submit" class="btn btn-primary">Yes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</form>
