--- a/FYP/wwwroot/css/site.css
+++ b/FYP/wwwroot/css/site.css
@@ -36,7 +36,7 @@ body {
 
 .signin-pageContent {
     left: 50%;
-    top: 50%;
+    top: 52%;
     transform: translate(-50%,-50% );
     position: absolute;
 }
@@ -119,7 +119,7 @@ input[type=email]::-webkit-input-placeholder {
 }
 
 .scrollspy {
-    height: 29rem;
+    height: 35rem;
     overflow-y: scroll;
 }
 
@@ -127,6 +127,7 @@ input[type=email]::-webkit-input-placeholder {
     background-color: darkblue;
     opacity: .5;
     cursor: pointer;
+    color:white;
 }
 
 .hide {
@@ -235,3 +236,41 @@ input[type=email]::-webkit-input-placeholder {
 .datetime:focus {
     color: black !important;
 }
+
+.Assignment-background {
+    background-image: url('../Images for background/Assignment3.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    color: white;
+}
+.AddAssginment-background {
+    background-image: url('../Images for background/Assignment4.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    color: white;
+}
+.modal-backdrop {
+    display: none;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: white;
+    border-radius: 10px;
+}
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #b30000;
+    }
