Progressed to notes.

--- a/FYP/Views/Dashboard/AddLinks.cshtml
+++ b/FYP/Views/Dashboard/AddLinks.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Links";
 }
-<body style="" class="links-background">
+<body style="" class="Addlinks-background">
 
 </body>
 
