--- a/FYP/Views/Dashboard/Links.cshtml
+++ b/FYP/Views/Dashboard/Links.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<FYP.Models.Dashboard.Links>
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Links";
-   
 }
 <body style="" class="links-background">
 
