--- a/FYP/Views/Shared/Dropdown_Partials/_security.cshtml
+++ b/FYP/Views/Shared/Dropdown_Partials/_security.cshtml
@@ -81,7 +81,7 @@
 
 <div id="Seditmodel_1">
 
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" asp-action="Profile" asp-controller="Account">
         <!-- Button trigger modal -->
         <!-- Modal -->
         <div class="modal fade" id="Seditmodel" tabindex="-1" aria-labelledby="SeditmodelLabel" aria-hidden="true">
