--- a/FYP/Views/Shared/_Layout.cshtml
+++ b/FYP/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <a class="nav-link text-white btn btn-outline-light @(Accessor.HttpContext.Request.Path.Value == "/ContactUs" ? "btn-primary" : "")" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
                         <li class="nav-item mx-2 bg-black bg-opacity-50">
-                            <a class="nav-link text-white btn btn-outline-light @(Accessor.HttpContext.Request.Path.Value == "/news&events" ? "btn-primary" : "")" asp-area="" asp-controller="Dashboard" asp-action="Assignments">Assignments</a>
+                            <a class="nav-link text-white btn btn-outline-light @(Accessor.HttpContext.Request.Path.Value == "/news&events" ? "btn-primary" : "")" asp-area="" asp-controller="Dashboard" asp-action="Notes">Notes</a>
                         </li>
 
                         <li class="nav-item mx-2 bg-black bg-opacity-50">
