--- a/FYP/Views/Dashboard/AddAssignment.cshtml
+++ b/FYP/Views/Dashboard/AddAssignment.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-8 bg-black bg-opacity-75 signin-pageContent p-4 rounded">
         <center>
-            <h1 class="text-white bg-white bg-opacity-10 text-white rounded">Add a new Assignment</h1>
+            <h1 class="text-white bg-white bg-opacity-10 text-white rounded">Add A New Assignment</h1>
         </center>
         <center>
             <form method="post" class="col-9" asp-action="AddAssignment" asp-controller="Dashboard" enctype="multipart/form-data" >
@@ -71,11 +71,11 @@
                 </div>
                 
                 <div class="text-center">
-                    <a asp-action="Assignments" asp-controller="Dashboard" class="btn btn-light m-1 fs-5">
+                    <a asp-action="Assignments" asp-controller="Dashboard" class="btn btn-light m-1 fs-5 hover">
                         All Assignments
                     </a>
 
-                    <input type="submit" value="Add Assignment" class="btn btn-light m-1 fs-5" />
+                    <input type="submit" value="Add Assignment" class="btn btn-light m-1 fs-5 hover" />
                 </div>
             </form>
         </center>
