--- a/FYP/Views/Shared/_ProfileDropdown.cshtml
+++ b/FYP/Views/Shared/_ProfileDropdown.cshtml
@@ -15,14 +15,16 @@
 }
 <!-- Example split danger button -->
 <div class="btn-group">
-    <button type="button" class="btn btn-outline-light me-1 bg-black bg-opacity-50" title="@username">@if (photo != "")
+    <button type="button" class="btn btn-outline-light me-1 bg-black bg-opacity-50" title="@username">
+        @if (photo != "")
         {
             <img class="" style="height:2.5rem;width:2.5rem;border-radius:5rem" src="@photo" alt="No Image" />
         }
         else
         {
             @username
-        }</button>
+        }
+    </button>
     <button type="button" class="btn btn-outline-light dropdown-toggle dropdown-toggle-split bg-black text-white" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="visually-hidden">@username</span>
     </button>
@@ -37,7 +39,8 @@
         <li>
             <a class="dropdown-item @(Accessor.HttpContext.Request.Path.Value == "/Help" ? "btn-primary" : "")" asp-page="/Account/Profile">
                 <div class="m-auto w-50"><img src="/Icons/Help.svg" class="img-fluid icon" /> Help </div>
-        </a></li>
+            </a>
+        </li>
         <li class="@(Accessor.HttpContext.Request.Path.Value == "/Setting" ? "btn-primary" : "")">
             <a class="dropdown-item" asp-action="Setting" asp-controller="Account">
                 <div class="m-auto w-50"><img src="/Icons/Setting.svg" class="img-fluid icon" /> Setting </div>
