Before adding the chat in the application

--- a/FYP/Views/Dashboard/AddNotes.cshtml
+++ b/FYP/Views/Dashboard/AddNotes.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Links";
 }
-<body style="" class="AddAssginment-background">
+<body style="" class="Addnote-background">
 
 </body>
 
