--- a/FYP/Views/Dashboard/Dashboard.cshtml
+++ b/FYP/Views/Dashboard/Dashboard.cshtml
@@ -150,7 +150,7 @@
 
             <div class="w-100"></div>
             <div class="col-3 m-1 flex-grow-1  bg-black my-auto d-flex justify-content-center bg-opacity-50  btn btn-outline-primary" style="cursor:pointer;">
-                <a href="#" class=" text-decoration-none link-dark">
+                <a asp-action="Assignments" asp-controller="Dashboard" class=" text-decoration-none link-dark">
                     <center>
                         <img class="icon2" src="~/icons/calender.svg" />
                     </center>
@@ -177,7 +177,7 @@
 
             </div>
             <div class="col-3 m-1  bg-black my-auto d-flex justify-content-center bg-opacity-50  btn btn-outline-primary mt-1" style="cursor:pointer;">
-                <a href="#" class=" text-decoration-none link-dark" title="Add your Personal Notes here">
+                <a asp-action="Notes" asp-controller="Dashboard" class=" text-decoration-none link-dark" title="Add your Personal Notes here">
                     <center>
                         <img class="icon2" src="~/icons/notes.svg" />
                     </center>
