--- a/FYP/Views/Dashboard/DetailsNote.cshtml
+++ b/FYP/Views/Dashboard/DetailsNote.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<body style="" class="Detailevents-background">
+<body style="" class="DetailNote-background">
 
 </body>
 @if (TempData["NoteUpdated"] != null)
@@ -19,96 +19,102 @@
 }
 
 <div id="placeHoderHere"></div>
+<div class="rounded bg-black bg-opacity-75 rounded p-2">
+    <div class="row">
+        <label class="fw-bold fs-2 w-auto">
+            Subject : @Html.DisplayFor(model => model.Subject)
+        </label>
+        <label class="fw-bold text-success fs-6">
+            SubTitle : @Html.DisplayFor(model => model.SubTitle)
+        </label>
+    </div>
 
-<div class="row">
-    <label class="fw-bold fs-2 w-auto">
-        Subject : @Html.DisplayFor(model => model.Subject)
-    </label>
-    <label class="fw-bold text-success fs-6">
-        SubTitle : @Html.DisplayFor(model => model.SubTitle)
-    </label>
-</div>
+    <hr />
 
-<hr />
-
-<div class="row">
+    <div class="row">
 
 
-    <div class="col-9 bg-black bg-opacity-50">
-        <dl class="row">
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item bg-transparent">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Download File
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show bg-black bg-opacity-50 text-start" data-bs-parent="#accordionExample">
-                        <div class="accordion-body d-flex">
+        <div class="col-9 ">
+            <dl class="row">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item bg-transparent">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Download File
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show bg-black bg-opacity-50 text-start" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-flex">
 
-                            @if (Model.File_Name != "" && Model.File_Name != null)
-                            {
-
-                                @foreach (var filename in names)
+                                @if (Model.File_Name != "" && Model.File_Name != null)
                                 {
-                                    if (filename != "")
-                                    {
-                                        <div>
 
-                                            <a asp-action="DownloadNoteFile" asp-controller="Dashboard" asp-route-filename="@filename" class="btn btn-outline-info m-1" title="download this file" download="@filename"> <img class="d-block icon2 mx-auto" src="~/Icons/download.svg" style="filter:invert(1);height:4rem;" /> Download</a>
-                                        </div>
+                                    @foreach (var filename in names)
+                                    {
+                                        if (filename != "")
+                                        {
+                                            <div>
+
+                                                <a asp-action="DownloadNoteFile" asp-controller="Dashboard" asp-route-filename="@filename" class="btn btn-outline-info m-1" title="download this file" download="@filename"> <img class="d-block icon2 mx-auto" src="~/Icons/download.svg" style="filter:invert(1);height:4rem;" /> Download</a>
+                                            </div>
+                                        }
                                     }
                                 }
-                            }
-                            else
-                            {
-                                <div class="my-auto position-relative text-center" style="top: 25%;">
-                                    <label class="text-white fw-bold text-uppercase">No Note file Provided</label>
-                                </div>
-                            }
+                                else
+                                {
+                                    <div class="my-auto position-relative text-center" style="top: 25%;">
+                                        <label class="text-white fw-bold text-uppercase">No Note file Provided</label>
+                                    </div>
+                                }
 
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="accordion-item bg-transparent">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            @Html.DisplayNameFor(model => model.Description)
-                        </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse bg-black bg-opacity-50 text-start" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            @Html.DisplayFor(model => model.Description)
+                    <div class="accordion-item bg-transparent">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                @Html.DisplayNameFor(model => model.Description)
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse bg-black bg-opacity-50 text-start" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                @Html.DisplayFor(model => model.Description)
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
+        </div>
+
+        <div class="col-3 ">
+         
+            <div class="bg-black bg-opacity-50 p-3 text-center rounded border-start">
+                <label asp-for="@Model.Uploaded_Time" class="text-muted fw-bold d-block"></label>
+                @Html.DisplayFor(model => model.Uploaded_Time,new {@class="text-muted fw-bold"})
             </div>
+
+            <hr />
+
+            <div class="bg-black bg-opacity-50 p-3 text-center rounded border-start">
+                <label asp-for="@Model.Uploaded_By" class="text-muted fw-bold d-block"></label>
+                @Html.DisplayFor(model => model.Uploaded_By,new {@class="text-muted fw-bold"})
+            </div>
+           
+
+        </div>
+    </div>
+    <hr />
+    <div class="bg-black bg-opacity-50 position-relative w-100 text-center rounded">
+        <button class="card-link btn btn-outline-warning m-2" asp-route-id="@Model.id" type="button" data-toggle="ajax-modal" data-target="#_EditNote" data-url="@Url.Action($"EditNote/{@Model?.id}","Dashboard")">Edit</button>
+
+        <a href="#_Delete" data-bs-toggle="modal" data-bs-target="#_Delete" class="btn btn-outline-danger m-2">Delete</a>
+
+        <a class="btn btn-outline-info m-2" asp-action="Notes" asp-controller="Dashboard">All Notes</a>
     </div>
 
-    <div class="col-3 border-start">
-       
-        <div class="bg-body">
-            <label asp-for="@Model.Uploaded_Time" class="text-muted fw-bold d-block"></label>
-            @Html.DisplayFor(model => model.Uploaded_Time,new {@class="text-muted fw-bold"})
-        </div>
-        <hr />
-        <div class="bg-body">
-            <label asp-for="@Model.Uploaded_By" class="text-muted fw-bold d-block"></label>
-            @Html.DisplayFor(model => model.Uploaded_By,new {@class="text-muted fw-bold"})
-        </div>
-        <hr />
 
-    </div>
 </div>
 
-<div class="bg-dark bg-opacity-75 position-relative w-100 text-center" style="top:2rem;">
-    <button class="card-link btn btn-outline-warning m-2" asp-route-id="@Model.id" type="button" data-toggle="ajax-modal" data-target="#_EditNote" data-url="@Url.Action($"EditNote/{@Model?.id}","Dashboard")">Edit</button>
-
-    <a href="#_Delete" data-bs-toggle="modal" data-bs-target="#_Delete" class="btn btn-outline-danger m-2">Delete</a>
-
-    <a class="btn btn-outline-info m-2" asp-action="Notes" asp-controller="Dashboard">All Notes</a>
-</div>
 
 <form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="DeleteNote" asp-route-id="@Model.id">
 
