--- a/FYP/Views/Dashboard/EventDetail.cshtml
+++ b/FYP/Views/Dashboard/EventDetail.cshtml
@@ -77,30 +77,30 @@
                 </div>             
         </div>
 
-        <div class="col-3 border-start">
-            <div class="bg-body">
+        <div class="col-3 ">
+            <div class="bg-body p-3 text-center rounded border-start">
                 <label asp-for="@Model.Date" class="text-muted fw-bold d-block"></label>
                 @Html.DisplayFor(model => model.Date,new {@class="text-muted fw-bold"})
             </div>
             <hr />
-            <div class="bg-body">
+            <div class="bg-body p-3 text-center rounded border-start">
                 <label asp-for="@Model.FromTime" class="text-muted fw-bold d-block"></label>
                 @Html.DisplayFor(model => model.FromTime,new {@class="text-muted fw-bold"})
             </div>
             <hr />
-            <div class="bg-body">
+            <div class="bg-body p-3 text-center rounded border-start">
                 <label asp-for="@Model.ToTime" class="text-muted fw-bold d-block"></label>
                 @Html.DisplayFor(model => model.ToTime,new {@class="text-muted fw-bold"})
             </div>
             <hr />
-            <div class="bg-body">
+            <div class="bg-body p-3 text-center rounded border-start">
                 <label asp-for="@Model.Locations" class="text-muted fw-bold d-block"></label>
                 @Html.DisplayFor(model => model.Locations,new {@class="text-muted fw-bold"})
             </div>
         </div>
     </div>
-
-    <div class="bg-dark bg-opacity-75 position-relative w-100" style="top:2rem;">
+    <hr />
+    <div class="bg-dark bg-opacity-75 rounded w-100" >
         <button class="card-link btn btn-outline-warning m-2" type="button" data-toggle="ajax-modal" data-target="#_EditEvent" data-url="@Url.Action($"EditEvent/{@Model?.id}","Dashboard")">Edit</button>
 
         <a class="btn btn-outline-info m-2" asp-action="News_and_Events" asp-controller="Dashboard">All Events</a>
