--- a/FYP/Views/Dashboard/News_and_Events.cshtml
+++ b/FYP/Views/Dashboard/News_and_Events.cshtml
@@ -1,8 +1,14 @@
-﻿@model IEnumerable<Models.Dashboard.news_events>
+﻿@using X.PagedList.Mvc.Core; @*import this so we get our HTML Helper*@
+@using X.PagedList; @*import this so we can cast our list to IPagedList (only necessary because ViewBag is dynamic)*@
+@using X.PagedList.Mvc.Core.Fluent
+@using X.PagedList.Web.Common
+
+@model IEnumerable<Models.Dashboard.news_events>
 @inject Models.Dashboard.news_events New_Events
 @{
     Layout = "_Layout";
-    
+
+    var pagedList = (IPagedList)ViewBag.Events;
 }
 
 <body style="" class="events-background">
@@ -63,83 +69,98 @@
 
     <div class="w-100"></div>
     <hr />
-    <div class="row">
-        <label class="fw-bold fs-2 w-auto">Upcoming Events</label>
+    <div class="row bg-black bg-opacity-75" >
+        <label class="fw-bold fs-2 w-auto text-uppercase">Upcoming Events</label>
     </div>
 
     <hr />
-
+    <div class="row overflow-scroll" style="height:100vh">
     @foreach (var events in Model)
     {
-       
+
         int id = events.id;
         var eventImage = "/profile_pics/" + (events.Event_Image_Name ?? "qm.jpg");
+        
+            <div class="row my-1 border-bottom bg-opacity-50 bg-black">
 
-        <div class="row my-1 border-bottom bg-opacity-50 bg-black">
+                <div class="col-2 p-1 my-auto">
+                    <h6 class="text-muted fw-bold text-center">Event Date</h6>
+                    <strong>@events.Date</strong>
+                </div>
+                <div class="col-4 p-1">
+                    <img class="w-100" style="height:15rem;" src="@eventImage" />
+                </div>
 
-            <div class="col-2 p-1 my-auto">
-                <h6 class="text-muted fw-bold text-center">Event Date</h6>
-                <strong>@events.Date</strong>
-            </div>
-            <div class="col-4 p-1">
-                <img class="w-100" style="height:15rem;" src="@eventImage" />
-            </div>
+                @*        For Text
+            *@
+                <div class="col-6 m-auto">
+                    <div class="w-100" style="">
+                        <div class="card-body">
+                            <h5 class="card-title"><h6 class="text-muted d-inline-flex me-3 fw-bold">Title :</h6>@events.Title</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">
+                                <h6 class="text-muted d-inline-flex me-3 fw-bold">Date :</h6>@events.Date
+                                <br> <h6 class="text-muted d-inline-flex me-3 fw-bold">Time :</h6>@events.FromTime To @events.ToTime
+                            </h6>
 
-            @*        For Text
-        *@
-            <div class="col-6 m-auto">
-                <div class="w-100" style="">
-                    <div class="card-body">
-                        <h5 class="card-title"><h6 class="text-muted d-inline-flex me-3 fw-bold">Title :</h6>@events.Title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">
-                            <h6 class="text-muted d-inline-flex me-3 fw-bold">Date :</h6>@events.Date
-                            <br> <h6 class="text-muted d-inline-flex me-3 fw-bold">Time :</h6>@events.FromTime To @events.ToTime
-                        </h6>
+                            <p class=""><h6 class="text-muted d-inline-flex me-3 fw-bold">Intoduction :</h6>@events.ShortDescription</p>
+                            <hr />
 
-                        <p class=""><h6 class="text-muted d-inline-flex me-3 fw-bold">Intoduction :</h6>@events.ShortDescription</p>
-                        <hr />
-                       
-                        <br>
+                            <br>
 
-                        <div class="justify-content-between d-flex">
+                            <div class="justify-content-between d-flex">
 
-                            <a asp-action="EventDetail" asp-controller="Dashboard" class="card-link btn btn-outline-success my-2" asp-route-id="@id">View Event Details</a> <br>
+                                <a asp-action="EventDetail" asp-controller="Dashboard" class="card-link btn btn-outline-success my-2" asp-route-id="@id">View Event Details</a> <br>
 
-                            <button class="card-link btn btn-outline-info my-2" type="button" data-toggle="ajax-modal" data-target="#_EditEvent" data-url="@Url.Action($"EditEvent/{id}","Dashboard")">Edit</button>
+                                <button class="card-link btn btn-outline-info my-2" type="button" data-toggle="ajax-modal" data-target="#_EditEvent" data-url="@Url.Action($"EditEvent/{id}","Dashboard")">Edit</button>
 
-                            <a href="#_DeleteEvent" data-bs-toggle="modal" data-bs-target="#_DeleteEvent" class="card-link btn btn-outline-danger my-2">Delete Event</a>
+                                <a href="#_DeleteEvent" data-bs-toggle="modal" data-bs-target="#_DeleteEvent" class="card-link btn btn-outline-danger my-2">Delete Event</a>
 
-                            <form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="Delete">
+                                <form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="Delete">
 
 
-                                <!-- Modal -->
-                                <div class="modal fade" id="_DeleteEvent" tabindex="-1" aria-labelledby="DeleteEvent" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content overflow-scroll text-white bg-black bg-opacity-50">
-                                            <div class="modal-header text-center">
-                                                <h1 class="modal-title fs-5 fw-bold text-uppercase" id="DeleteEvent">Do you want to delete this Event</h1>
-                                                <button type="button" class="btn-close filt " data-bs-dismiss="modal" aria-label="Close"></button>
-                                            </div>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="_DeleteEvent" tabindex="-1" aria-labelledby="DeleteEvent" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content overflow-scroll text-white bg-black bg-opacity-50">
+                                                <div class="modal-header text-center">
+                                                    <h1 class="modal-title fs-5 fw-bold text-uppercase" id="DeleteEvent">Do you want to delete this Event</h1>
+                                                    <button type="button" class="btn-close filt " data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
 
                                                 <input type="hidden" asp-for="@id" />
-                                           
 
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="submit" class="btn btn-primary">Delete Event</button>
+
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="submit" class="btn btn-primary">Delete Event</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                            </form>
+                                </form>
 
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        
     }
+    </div>
+    <center>
+
+        @Html.PagedListPager(pagedList,
+        page => Url.Action("News_and_Events","Dashboard",
+        new { page }),
+        new PagedListRenderOptions()
+        {
+        DisplayItemSliceAndTotal = true,
+        ItemSliceAndTotalPosition = ItemSliceAndTotalPosition.End,
+        MaximumPageNumbersToDisplay=3
+        })
+
+    </center>
 
     @*Creating New Event*@
     <form method="post" enctype="multipart/form-data" asp-controller="Dashboard" asp-action="News_and_Events">
@@ -247,7 +268,7 @@
                 }
             }
 
-            
+
         </script>
 
     }
